# Heimdall-Gate

./: .env.example  .gitignore  ARCHITECTURE.md  DATABRICKS_SETUP.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
config/: logging.py  settings.py
databricks/jobs/: 00_bootstrap_tables.py  01_bronze_ingest.py  02_silver_transform.py  03_gold_aggregates.py
databricks/notebooks/: exploration.py
docs/: architecture.html
ingest/: __main__.py  producer.py  runner.py  schemas.py  yelp_client.py
scripts/: create_topics.sh  smoke_test.sh
tests/: conftest.py  test_producer.py  test_runner.py  test_schemas.py  test_validators.py  test_yelp_client.py
validation/: __init__.py  validators.py
